--- a/DOMEvents/PreventDefault/index.html
+++ b/DOMEvents/PreventDefault/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>My Form</h1>
-
+    <form action="/shelter">
+        <input type="text"/>
+        <button>Submit</button>
     <script src="app.js"></script>
 </body>
 </html>
