--- a/DOMEvents/PreventDefault/index.html
+++ b/DOMEvents/PreventDefault/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <h1>My Form</h1>
-    <form action="/shelter">
+    <form action="/shelter" id="shelterForm">
         <input type="text"/>
         <button>Submit</button>
+    </form>
+    <h2>Available Cats</h2>
+    <ul id="cats"></ul>
+
     <script src="app.js"></script>
 </body>
 </html>
