--- a/DOMEvents/PreventDefault/index.html
+++ b/DOMEvents/PreventDefault/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>My Form</h1>
     <form action="/shelter" id="shelterForm">
-        <input type="text"/>
+        <input type="text" id="catName"/>
         <button>Submit</button>
     </form>
     <h2>Available Cats</h2>
